[gd_scene load_steps=12 format=3 uid="uid://h3orryxwm645"]

[ext_resource type="Script" uid="uid://b0764gkki3gqg" path="res://Scripts/UI_Items/TaskWidget.gd" id="1_m6845"]
[ext_resource type="Texture2D" uid="uid://o1t1ddaimnat" path="res://Assets/Icons/informacion.png" id="2_48eyq"]
[ext_resource type="StyleBox" uid="uid://cllj10f4yfeo1" path="res://Assets/StyleBoxFlat/DoneButtonNormal.tres" id="2_i2me2"]
[ext_resource type="PackedScene" uid="uid://lxc2ue7dqnkq" path="res://Scenes/UI_Items/DeleteConfirmDialog.tscn" id="2_m8dj0"]
[ext_resource type="StyleBox" uid="uid://dkqvjqpxv6qlh" path="res://Assets/StyleBoxFlat/TaskWidgetNotDone.tres" id="2_o8up4"]
[ext_resource type="StyleBox" uid="uid://mvhiinkwfsgd" path="res://Assets/StyleBoxFlat/DoneButtonHover.tres" id="3_6nofy"]
[ext_resource type="StyleBox" uid="uid://11011eqnul4c" path="res://Assets/StyleBoxFlat/DoneButtonPressed.tres" id="3_7v3k0"]
[ext_resource type="PackedScene" uid="uid://cepo4n3ehc4mn" path="res://Scenes/UI_Items/EditTaskPopup.tscn" id="3_rlok0"]
[ext_resource type="Texture2D" uid="uid://nlnen54j08bl" path="res://Assets/Icons/add.png" id="3_vdqdf"]
[ext_resource type="Texture2D" uid="uid://cj26ylxikxtlh" path="res://Assets/Icons/trash.png" id="6_al1g1"]
[ext_resource type="Texture2D" uid="uid://u37m8n31y17r" path="res://Assets/Icons/edit.png" id="8_k5jy0"]

[node name="TaskWidget" type="MarginContainer"]
offset_right = 815.0
offset_bottom = 167.0
size_flags_horizontal = 3
focus_mode = 1
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 22
script = ExtResource("1_m6845")

[node name="DeleteConfirmDialog" parent="." instance=ExtResource("2_m8dj0")]

[node name="EditTaskPopup" parent="." instance=ExtResource("3_rlok0")]
visible = false

[node name="Background" type="Panel" parent="."]
y_sort_enabled = true
layout_mode = 2
theme_override_styles/panel = ExtResource("2_o8up4")

[node name="TaskContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TaskContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DoneButton" type="Button" parent="TaskContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_pressed_color = Color(0.129412, 0.141176, 0.14902, 1)
theme_override_styles/hover = ExtResource("3_6nofy")
theme_override_styles/pressed = ExtResource("3_7v3k0")
theme_override_styles/normal = ExtResource("2_i2me2")
toggle_mode = true
text = "✓"

[node name="TaskNameLabel" type="Label" parent="TaskContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
text = "Sin nombre"
clip_text = true

[node name="DeleteButton" type="Button" parent="TaskContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 20.0
mouse_filter = 1
icon = ExtResource("6_al1g1")
flat = true
icon_alignment = 1
expand_icon = true

[node name="EditButton" type="Button" parent="TaskContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 20.0
mouse_filter = 1
icon = ExtResource("8_k5jy0")
flat = true
icon_alignment = 1
expand_icon = true

[node name="MoreInfoButton" type="Button" parent="TaskContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
icon = ExtResource("2_48eyq")
flat = true
icon_alignment = 1
expand_icon = true

[node name="DateGrid" type="VBoxContainer" parent="TaskContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="StartDateLabel" type="RichTextLabel" parent="TaskContainer/HBoxContainer/DateGrid"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
bbcode_enabled = true
text = "[i][color=#111111]no fecha [/color][/i]"
fit_content = true
horizontal_alignment = 2

[node name="EndDateLabel" type="RichTextLabel" parent="TaskContainer/HBoxContainer/DateGrid"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
bbcode_enabled = true
text = "[i][color=#111111]no fecha [/color][/i]"
fit_content = true
horizontal_alignment = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="TaskContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[i][color=#111111]Sin descripción [/color][/i]"
fit_content = true

[node name="TagContainer" type="VBoxContainer" parent="TaskContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TaskContainer/TagContainer"]
layout_mode = 2

[node name="AddTagButton" type="Button" parent="TaskContainer/TagContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
icon = ExtResource("3_vdqdf")
flat = true
expand_icon = true

[node name="SelectTagButton" type="OptionButton" parent="TaskContainer/TagContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
icon_alignment = 1
expand_icon = true
fit_to_longest_item = false
allow_reselect = true

[connection signal="confirmed" from="DeleteConfirmDialog" to="." method="_on_delete_confirm_dialog_confirmed"]
[connection signal="toggled" from="TaskContainer/HBoxContainer/DoneButton" to="." method="_on_done_button_toggled"]
[connection signal="pressed" from="TaskContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="TaskContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="TaskContainer/HBoxContainer/MoreInfoButton" to="." method="_on_more_info_button_pressed"]
[connection signal="pressed" from="TaskContainer/TagContainer/HBoxContainer/AddTagButton" to="." method="_on_add_tag_button_pressed"]
[connection signal="item_selected" from="TaskContainer/TagContainer/HBoxContainer/SelectTagButton" to="." method="_on_select_tag_button_item_selected"]
